Fix window buttons overlapping tooltips (#568)
Conditionally change the tooltip's callout `bounds` so that the top boundary can be lowered if the tooltip target is near the window icons.

This isn't perfect because it doesn't take the tooltip's size into account, but seems to handle some basic cases I tested.

--- a/app/components/Toolbar.module.scss
+++ b/app/components/Toolbar.module.scss
@@ -12,7 +12,7 @@
 //   You may not use this file except in compliance with the License.
 
 @import "@foxglove-studio/app/styles/colors.module.scss";
-@import "@foxglove-studio/app/styles/variables.scss";
+@import "@foxglove-studio/app/styles/variables.module.scss";
 
 .toolbar {
   padding: 0 0 0 8px;
@@ -25,4 +25,15 @@
   justify-content: flex-end;
   background-color: $dark2;
   -webkit-app-region: drag; // make electron window draggable
+}
+
+$toolbar-inset-width: 78px;
+
+.insetToolbar {
+  margin-left: $toolbar-inset-width;
+  border-left: 2px groove #29292f;
+}
+
+:export {
+  toolbarInsetWidth: $toolbar-inset-width;
 }
